[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/title.png" type="Texture" id=2]
[ext_resource path="res://assets/test_g.png" type="Texture" id=3]
[ext_resource path="res://assets/test_b.png" type="Texture" id=4]
[ext_resource path="res://assets/start.png" type="Texture" id=5]
[ext_resource path="res://assets/test.png" type="Texture" id=6]
[ext_resource path="res://assets/start_b.png" type="Texture" id=7]
[ext_resource path="res://assets/start_g.png" type="Texture" id=8]
[ext_resource path="res://assets/background.png" type="Texture" id=9]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.66875, 0.666667 )
texture = ExtResource( 9 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 594.0
margin_top = 20.0
margin_right = 685.0
margin_bottom = 700.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 39.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 91.0
margin_bottom = 203.0

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 34.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="CreditsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 91.0
margin_bottom = 72.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="ControlsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 91.0
margin_bottom = 110.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 91.0
margin_bottom = 148.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
